deploy/retrieveUnpackaged/objects/Account_Transition_Checklist__c.object
<CustomObject>
    <description>This is a list of questions to help with transition of accounts in support.</description>
    <fields>
        <fullName>ARIC_Instructions_are_up_to_date__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ARIC Instructions are up to date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <formula>Account__r.CORE_Account_number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Transition Checklist</relationshipLabel>
        <relationshipName>Account_Transition_Checklist</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>And_associated_credits__c</fullName>
        <inlineHelpText>Please enter any associated credits from the above major issues.</inlineHelpText>
        <label>...And associated credits?</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Anniversary_Date__c</fullName>
        <formula>Account__r.Account_Birthday__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Anniversary Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Any_Changes_in_Personnel__c</fullName>
        <inlineHelpText>Please enter any changes in personnel that are relationship impacting?</inlineHelpText>
        <label>Any Changes in Personnel</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Any_Products_or_Support_One_Offs__c</fullName>
        <label>Any Products or Support One-Offs</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Any_major_issues_they_have_experienced__c</fullName>
        <inlineHelpText>Please explain/list any major issues they have experienced since joining Rackspace.</inlineHelpText>
        <label>Any major issues they have experienced?</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Anything_not_above_that_is_important__c</fullName>
        <inlineHelpText>Is ther ANYTHING else not included above that is remotely outside the ordinary or otherwise relevant to the Fanatical Support of this account?</inlineHelpText>
        <label>Anything not above that is important</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Churn_Forecasts_are_up_to_date__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Churn Forecasts are up to date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_2_Personality_Profile__c</fullName>
        <formula>text(Contact_2__r.Disc_Profile__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact #2 Personality Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_2_Role_in_Support_Relationship__c</fullName>
        <inlineHelpText>Please enter the role contact #2 has in the support relationship.</inlineHelpText>
        <label>Contact #2 Role in Support Relationship</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_2_Title__c</fullName>
        <formula>Contact_2__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact #2 Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_2__c</fullName>
        <inlineHelpText>Please look up contact #2 that you wish to add to the transition checklist.</inlineHelpText>
        <label>Contact #2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Account Transition Checklist (Contact #2)</relationshipLabel>
        <relationshipName>Account_Transition_Checklist1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_3_Personality_Profile__c</fullName>
        <formula>text( Contact_3__r.Disc_Profile__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact #3 Personality Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_3_Role_in_Support_Relationship__c</fullName>
        <inlineHelpText>Please enter the role contact #3 has in the support relationship.</inlineHelpText>
        <label>Contact #3 Role in Support Relationship</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_3_Title__c</fullName>
        <formula>Contact_3__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact #3 Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_3__c</fullName>
        <inlineHelpText>Please lookup the contact you would like to add to the transition checklist.</inlineHelpText>
        <label>Contact #3</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Account Transition Checklist (Contact #3)</relationshipLabel>
        <relationshipName>Account_Transition_Checklist2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Status_Payment_History_other__c</fullName>
        <inlineHelpText>Please enter the contract status, payment history, and SLA/MSA or other Provisions.</inlineHelpText>
        <label>Contract Status/Payment History/other</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Current_or_upcoming_projects_upgrades__c</fullName>
        <inlineHelpText>Please enter any current or upcoming projects and/or upgrades.</inlineHelpText>
        <label>Current or upcoming projects/upgrades</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Describe_Customer_s_Business__c</fullName>
        <inlineHelpText>Please describe the customer&apos;s business. Who are they and what do they do?</inlineHelpText>
        <label>Describe Customer&apos;s Business</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Emergency_Instructions_and_Explain__c</fullName>
        <inlineHelpText>Please enter any emergency instructions and explain the significance.</inlineHelpText>
        <label>Emergency Instructions and Explain</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Function_Purpose_use_of_config__c</fullName>
        <inlineHelpText>For what function/purpose does the customer use the configuration being hosted at Rackspace?</inlineHelpText>
        <label>Function/Purpose use of config</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Key_Contact_Personality_Profile__c</fullName>
        <formula>text(Key_Contact__r.Disc_Profile__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Key Contact Personality Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Contact_Role_in_Support_Relationship__c</fullName>
        <inlineHelpText>Enter a short description of the role the key contact has in the support relationship.</inlineHelpText>
        <label>Key Contact Role in Support Relationship</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Contact_Title__c</fullName>
        <formula>Key_Contact__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Key Contact Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Contact__c</fullName>
        <label>Key Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Account Transition Checklist</relationshipLabel>
        <relationshipName>Account_Transition_Checklist</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Length_of_Time_with_Rackspace_months__c</fullName>
        <inlineHelpText>Please enter the length in months that the customer has been with Rackspace.</inlineHelpText>
        <label>Length of Time with Rackspace (months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>List_above_s_communication_preferences__c</fullName>
        <inlineHelpText>Please list the communication preferences for the contacts above.</inlineHelpText>
        <label>List above&apos;s communication preferences:</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recommend_to_Rackspace__c</fullName>
        <inlineHelpText>On a Scales of 1-10, how likely would this customer be to recommend a colleague?</inlineHelpText>
        <label>Recommend to Rackspace</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Technical_Overview__c</fullName>
        <inlineHelpText>Please provide a technical overview of this customer. What is unique? What is important? What are the customer&apos;s technical expectations? What are the gotcha&apos;s? What are the primary concepts and support requirements a sysadmin or engineer will need to know</inlineHelpText>
        <label>Technical Overview</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>What_you_need_to_know_about_Contact_2__c</fullName>
        <inlineHelpText>Please enter anything you need to pass on about the contact #2.</inlineHelpText>
        <label>What you need to know about Contact #2</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>What_you_need_to_know_about_Contact_3__c</fullName>
        <inlineHelpText>Please enter anything you need to pass on about the contact #2.</inlineHelpText>
        <label>What you need to know about Contact #3</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>What_you_need_to_know_about_Key_Contact__c</fullName>
        <inlineHelpText>Please enter anything you need to pass on about the key contact.</inlineHelpText>
        <label>What you need to know about Key Contact</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>When_have_we_saved_this_customer__c</fullName>
        <label>When have we saved this customer?</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Why_did_they_choose_Rackspace__c</fullName>
        <label>Why did they choose Rackspace?</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Account Transition Checklist</label>
    <nameField>
        <label>Account Transition Checklist Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Transition Checklist</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>